# YaSLP-GUI_Rust_Rewrite

./: CLAUDE.md  Cargo.toml  README.md  build.sh
.cargo/: config.toml
.github/workflows/: nightly.yml  release.yml
release_assets/: yaslp-web-linux-aarch64  yaslp-web-linux-armv7  yaslp-web-linux-x86_64
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  parse.rs  settings.rs
src/: app.rs  fetch.rs  main.rs  models.rs  settings.rs
web/: Cargo.toml  index.html
web/src/: fetch.rs  main.rs  models.rs  settings.rs
