[workspace]
members = ["shared", "web"]
resolver = "2"

[package]
name = "yaslp-gui"
version = "1.3.4"
edition = "2024"
description = "Yet another Switch LAN Play GUI - Cross-platform Rust rewrite"
license = "GPL-3.0"

[[bin]]
name = "yaslp-gui"
path = "src/main.rs"

[dependencies]
yaslp-shared = { path = "shared" }
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "accesskit"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["default"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rayon = "1"
rfd = "0.15"

[target.'cfg(unix)'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["glow", "default_fonts", "accesskit", "wayland", "x11"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = [
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
] }

# Release profile applies to all workspace members
[profile.release]
opt-level = 3
lto = true
strip = true
