[package]
name = "yaslp-web"
version = "1.1.3"
edition = "2024"
description = "Yet another Switch LAN Play GUI - Web Edition"
license = "GPL-3.0"

[[bin]]
name = "yaslp-web"
path = "src/main.rs"

[dependencies]
yaslp-shared = { path = "../shared" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
